--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mdbvue": "6.2.0",
     "vue": "^2.6.11",
     "vue-form-generator": "^2.3.4",
-    "vue-router": "^3.4.9"
+    "vue-router": "^3.4.9",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
