--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "vue-cli-service serve --open"
+    "start": "vue-cli-service serve --open --https"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "mdbvue": "6.2.0",
+    "mdbvue": "6.7.2",
     "vue": "^2.6.11",
-    "vue-form-generator": "^2.3.4",
-    "vue-router": "^3.4.9",
-    "vuex": "^3.6.0"
+    "vue-router": "^3.4.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
